package Decorator;

public abstract class Beverage {
    abstract String getDescription();
    abstract double getCost();
}
